@@ -1,4 +1,4 @@
-# ActiveMQ Artemis Helm Chart
+## ActiveMQ Artemis Helm Chart
 
 This Helm chart deploys Apache ActiveMQ Artemis on Kubernetes, providing a reliable and scalable message broker.
 
@@ -6,24 +6,24 @@ This Helm chart deploys Apache ActiveMQ Artemis on Kubernetes, providing a relia
 
 Apache ActiveMQ Artemis is a multi-protocol, embeddable, high performance, clustered, asynchronous messaging system. This Helm chart provides a complete deployment solution for ActiveMQ Artemis on Kubernetes, including:
 
-- StatefulSet deployment
-- Persistent storage
-- Configuration management
-- Authentication
-- Service exposure
-- Health checks
+*   StatefulSet deployment
+*   Persistent storage
+*   Configuration management
+*   Authentication
+*   Service exposure
+*   Health checks
 
 ## Prerequisites
 
-- Kubernetes 1.16+
-- Helm 3.0+
-- PV provisioner support in the underlying infrastructure (if persistence is enabled)
+*   Kubernetes 1.16+
+*   Helm 3.0+
+*   PV provisioner support in the underlying infrastructure (if persistence is enabled)
 
 ## Installing the Chart
 
 To install the chart with the release name `my-activemq`:
 
-```bash
+```plaintext
 helm install my-activemq ./active-mq
 ```
 
@@ -33,7 +33,7 @@ The command deploys ActiveMQ Artemis on the Kubernetes cluster with default conf
 
 To uninstall/delete the `my-activemq` deployment:
 
-```bash
+```plaintext
 helm delete my-activemq
 ```
 
@@ -42,7 +42,7 @@ helm delete my-activemq
 ### Global Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `nameOverride` | String to partially override the release name | `""` |
 | `fullnameOverride` | String to fully override the release name | `""` |
 | `replicaCount` | Number of ActiveMQ replicas | `1` |
@@ -50,7 +50,7 @@ helm delete my-activemq
 ### Image Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `image.repository` | ActiveMQ Artemis image repository | `apache/activemq-artemis` |
 | `image.tag` | ActiveMQ Artemis image tag | `2.39.0` |
 | `image.pullPolicy` | Image pull policy | `IfNotPresent` |
@@ -59,7 +59,7 @@ helm delete my-activemq
 ### Security Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `serviceAccount.create` | If true, create a service account | `true` |
 | `serviceAccount.automount` | Automatically mount service account token | `true` |
 | `serviceAccount.annotations` | Annotations for service account | `{}` |
@@ -75,7 +75,7 @@ helm delete my-activemq
 ### Pod Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `podAnnotations` | Annotations for pods | `{"prometheus.io/scrape": "true", "prometheus.io/port": "9404"}` |
 | `podLabels` | Additional labels for pods | `{}` |
 | `resources` | CPU/Memory resource requests/limits | `{}` |
@@ -86,21 +86,21 @@ helm delete my-activemq
 ### Service Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `service.type` | Kubernetes service type | `ClusterIP` |
 | `service.ports` | Service ports configuration | See [values.yaml](values.yaml) |
 
 ### Health Checks
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `livenessProbe` | Liveness probe configuration | See [values.yaml](values.yaml) |
 | `readinessProbe` | Readiness probe configuration | See [values.yaml](values.yaml) |
 
 ### Storage Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `persistence.claimName` | Name of the PersistentVolumeClaim | `pvc-activemq-artemis` |
 | `persistence.size` | PVC size | `10Gi` |
 | `persistence.storageClass.create` | Create a StorageClass | `true` |
@@ -113,15 +113,21 @@ helm delete my-activemq
 ### Volume Settings
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
+| --- | --- | --- |
 | `volumes` | Additional volumes | See [values.yaml](values.yaml) |
 | `volumeMounts` | Additional volume mounts | See [values.yaml](values.yaml) |
 
-### Init Containers
+### Environment Variable Container
 
 | Parameter | Description | Default |
-|-----------|-------------|---------|
-| `initContainers` | Init containers configuration | See [values.yaml](values.yaml) |
+| --- | --- | --- |
+| `envVars` | Environment Variable for ActiveMQ Artemis | See [values.yaml](values.yaml) |
+
+```plaintext
+### Example:
+envVars:
+  JDK_JAVA_OPTIONS: -Xms512M -Xmx1G -Xlog:gc=debug:file=/tmp/gc.log
+```
 
 ## Configuration
 
@@ -129,38 +135,37 @@ helm delete my-activemq
 
 The ActiveMQ configuration is stored in a ConfigMap and mounted to the container. The following files are included:
 
-- `broker.xml` - Main broker configuration
-- `bootstrap.xml` - Web server configuration
-- `management.xml` - JMX management configuration
-- `login.config` - JAAS login configuration
-- `artemis-users.properties` - User definitions
-- `artemis-roles.properties` - Role definitions
-- `jmx.access` - JMX access control
-- `jmx.password` - JMX passwords
-- `broker.properties` - Additional broker properties
+*   `broker.xml` - Main broker configuration
+    
 
-You can customize these files by modifying the ConfigMap template.
+You can customize the `broker.xml` files by modifying brokerXml in [values.yaml](values.yaml).  
+Example:
+
+```plaintext
+config:
+  brokerXml:
+    global-max-size: 100Mb
+```
+
+The above config will be custom **\<global-max-size>100Mb\</global-max-size>** in`broker.xml`
 
 ### Authentication
 
-
-1. **Create a new secret** (default behavior):
-   - Set `authentication.create` to `true`
-   - Username: `admin` (configurable via `authentication.defaultUsername`)
-   - Password: Random 16-character string (configurable via `authentication.defaultPassword`)
-   - Secret keys are customizable:
-     - Username key: Set with `authentication.secretKeys.username` (default: `ACTIVEMQ_USER`)
-     - Password key: Set with `authentication.secretKeys.password` (default: `ACTIVEMQ_PASSWORD`)
-
-2. **Use an existing secret**:
-   - Set `authentication.existingSecret` to the name of your secret
-   - Configure the key names to match your existing secret:
-     - Username key: Set with `authentication.secretKeys.username`
-     - Password key: Set with `authentication.secretKeys.password`
-
-3. **No secret creation**:
-   - Set `authentication.create` to `false` and don't provide `authentication.existingSecret`
-   - Default username and password to login into ActiveMQ are `artemis`/`artemis` if no authentication is configured
+1.  **Create a new secret** (default behavior):
+    *   Set `authentication.create` to `true`
+    *   Username: `admin` (configurable via `authentication.defaultUsername`)
+    *   Password: Random 16-character string (configurable via `authentication.defaultPassword`)
+    *   Secret keys are customizable:
+        *   Username key: Set with `authentication.secretKeys.username` (default: `ACTIVEMQ_USER`)
+        *   Password key: Set with `authentication.secretKeys.password` (default: `ACTIVEMQ_PASSWORD`)
+2.  **Use an existing secret**:
+    *   Set `authentication.existingSecret` to the name of your secret
+    *   Configure the key names to match your existing secret:
+        *   Username key: Set with `authentication.secretKeys.username`
+        *   Password key: Set with `authentication.secretKeys.password`
+3.  **No secret creation**:
+    *   Set `authentication.create` to `false` and don't provide `authentication.existingSecret`
+    *   Default username and password to login into ActiveMQ are `artemis`/`artemis` if no authentication is configured
 
 ## Persistence
 
@@ -169,18 +174,19 @@ The chart mounts a Persistent Volume for storing ActiveMQ data. The volume is cl
 ## Accessing ActiveMQ
 
 The chart exposes the following ports:
-- 61613: STOMP
-- 5672: AMQP
-- 8161: Web Console
-- 1099: JMX
-- 1098: RMI Registry
-- 61616: Core protocols (CORE, AMQP, STOMP, HORNETQ, MQTT, OPENWIRE)
+
+*   61613: STOMP
+*   5672: AMQP
+*   8161: Web Console
+*   1099: JMX
+*   1098: RMI Registry
+*   61616: Core protocols (CORE, AMQP, STOMP, HORNETQ, MQTT, OPENWIRE)
 
 ### Web Console
 
 The ActiveMQ web console is available at port 8161. To access it from outside the cluster:
 
-```bash
+```plaintext
 kubectl port-forward svc/my-activemq 8161:8161
 ```
 
@@ -192,14 +198,14 @@ The chart includes Prometheus annotations for scraping metrics. The metrics are 
 
 ## Chart Structure
 
-```
+```plaintext
 active-mq/
 ├── Chart.yaml                 # Chart metadata
 ├── values.yaml                # Default configuration values
 ├── templates/
 │   ├── _helpers.tpl           # Helper templates
 │   ├── configmap.yaml         # ActiveMQ configuration
-│   ├── ebs-gp3-sc.yml         # Storage class definition
+│   ├── storageclass.yml       # Storage class definition
 │   ├── NOTES.txt              # Usage notes
 │   ├── pvc.yaml               # Persistent volume claim
 │   ├── secret.yaml            # Authentication secret
@@ -213,7 +219,7 @@ active-mq/
 
 To customize the chart, create a `values.yaml` file with your changes and use it when installing:
 
-```bash
+```plaintext
 helm install my-activemq ./active-mq -f my-values.yaml
 ```
 
@@ -221,20 +227,21 @@ helm install my-activemq ./active-mq -f my-values.yaml
 
 ### Checking Logs
 
-```bash
+```plaintext
 kubectl logs -f deployment/my-activemq
 ```
 
 ### Checking Pod Status
 
-```bash
+```plaintext
 kubectl get pods -l app=my-activemq
 ```
 
 ## Create Helm Package
+
 ### Commands
 
-```bash
+```plaintext
 helm package ./active-mq --destination .
 helm repo index ./ --url  https://underndog.github.io/activemq-helm-chart
 ```
